--- a/Borko_Vorlage.tex
+++ b/Borko_Vorlage.tex
@@ -57,6 +57,10 @@ Punkte: 16
 		Gesamt && 6h & 7.5h\\\tabucline[2pt]{-}
 	\end{tabu}	
 \chapter{Arbeitsdurchführung}
+
+Beim Sniffer habe ich mir die Vorlagen von Jnetpcap angeschaut und diese zur Kreation meines Sniffers herangenommen.
+Im der ersten Phase des Sniffers suche ich mir die Liste an Adaptern heraus die auf die der Sniffer sniffen kann.
+Das hat am Anfang zu Problemen bei mir gef"uhrt da ich noch von den Vorjahren einige Loopback adapter hatte die ich erst deaktivieren musste. Nachdem ich dieses Problem gel"ost hatte ging ich die Aufgabe der Packetausgabe an. Da hatte ich f"ur die normale Ausgabe keine Problem, bis ich bemerkte das ich Limitieren musste welche Packete mitgesnifft werden m"ussen. Nach einer weile Recherche habe ich auch dieses Problem gel"ost. Danach war die Ausgabe der Packete nur noch ein kleines Problem. Es kostet mich ein wenig extra Zeit herauszufinden mit welchem Befehl ich die Payload eines Packetes ausgeben kann und es in Hexadezimal auch anzuzeigen. Danach war nur noch die Anzahl der Durchläufe einzugeben und den Sniffer zuschlie"sen. 
 \chapter{Testbericht}
 \chapter{Quellen}
 
